modified index js and vercel json

--- a/vercel.json
+++ b/vercel.json
@@ -12,5 +12,10 @@
       "src": "/(.*)",
       "dest": "index.js"
      }
-    ]
+    ],
+    "functions": {
+        "api/index.js": {
+          "runtime": "nodejs18.x"
+        }
+      }
    }
