--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "description": "",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node api/index.js",
+    "dev": "nodemon api/index.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -16,6 +16,7 @@
     "mongoose": "^8.4.3",
     "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4",
-    "otp-generator": "^4.0.1"
+    "otp-generator": "^4.0.1",
+    "serverless-http": "^3.2.0"
   }
 }
